syntax = "proto3";

package gwc.gateway.v1;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "gwc/gateway/v1/params.proto";

option go_package = "gwc/x/gateway/types";

// GenesisState defines the gateway module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  string port_id = 2;
}
